<resources>
    <string name="app_name">Pets Hunting</string>
    <string name="app_versionName" translatable="false">1</string>
    <string name="set_up">Setup</string>
    <string name="user_guide">User Guide</string>
    <string name="play">Play</string>
    <string name="set_up_title">Setup:Device optimization</string>
    <string name="menu">Menu</string>
    <string name="setup_1">Follow these</string>
    <string name="setup_2">3 steps to start</string>
    <string name="setup_3">your toy:</string>
    <string name="setup_one">1 </string>
    <string name="setup_two">2 </string>
    <string name="setup_three">3 </string>

    <string name="setup_step_1">Switch the dongle on \nback of the toy to ON.</string>
    <string name="setup_step_2">Turn on Bluetooth</string>
    <string name="setup_step_3">Start the app \non your phone</string>
    <string name="user_guide_remind">Pet products remote control,\nit can control the direction \nand speed.</string>
    <string name="user_guide_blue">Transmission signal with  \nbluetooth connection.</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="user_guide_5">From the home page you \nwant to start control make the \ncat toy.Simply click the \"play\"  \nbutton icon.</string>
    <string name="user_guide_6">The remote control is \nhorizontal screen. \nManual rotation mobile \nphones is avaiable in this app.</string>
    <string name="user_guide_7">The Anione Mouse User Guide \nis always available by clicking \nthe \"User Guide\" icon \nbutton on the bottom of page. \nThis will take you to the User \nGuide menu and get help.</string>
    <string name="user_guide_8">Congratulations!! You now \nknow how to use the App \nfor use with the pet products. \nHava fun!</string>
    <string name="speed">SPEED</string>
    <string name="direction">DIRECTION</string>
    <string name="sb_max">100</string>
    <string name="sb_min">40</string>
    <string name="play_title">Play:Remote Control</string>
    <string name="bluetooth_switch_has_opened">Bluetooth On</string>
    <string name="bluetooth_switch_not_opened">Bluetooth Off</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open_bluetooth_switch">Turn on Bluetooth?</string>
    <string name="connect_the_toy">Connect The Toy</string>
    <string name="match">Match</string>

    <string name="system_cancel">Cancel</string>
    <string name="system_sure">Confirm</string>
    <string name="system_sureifexit">Are you sure to exit?</string>
    <string name="bt_not_enabled_leaving">The bluetooth device is disabled.</string>
    <string name="str_gps" translatable="false">GPS</string>
    <string name="str_bluetooth">Bluetooth</string>
    <string name="str_camera">Camera</string>
    <string name="str_permission_prompt">You need to grant access to </string>
    <string name="str_permission_denied">Some Permission is Denied</string>


    <string name="connecting_device">Waiting for Bluetooth...</string>
    <string name="data_loading">Loading Data...</string>
    <string name="search_device_empty">Bluetooth unable to be found</string>
    <string name="search_device_over">Bluetooth searching finish</string>
    <string name="match_device_ok">Bluetooth connection successful</string>
    <string name="match_device_fail">Bluetooth connection unsuccessful</string>
    <string name="device_is_empty_not_match">Bluetooth unable to be found. Please try again</string>
    <string name="stop">Stop</string>
    <string name="str_location">access my location</string>
    <string name="device_service_not_match">Device not paired</string>
    <string name="bluetooth_service_break_restart">Bluetooth connection lost.  Please try again</string>
    <string name="moible_not_support_bluetooth4">This device does not support Bluetooth 4.0</string>

    <string name="loading">Loading...</string>
    <string name="close_loading">close connect with mouth</string>
    <string name="btn_re_load">Reload</string>

    <string name="low_battery_remind">设备电量较低,请您及时充电</string>
    <string name="bluetooth_isconnecting">蓝牙正在重连...</string>
    <string name="relinked_bluetooth_ok">重连设备成功</string>
    <string name="relinked_bluetooth_fail">重连设备失败,请重启蓝牙老鼠在重新连接</string>

    <string name="check_phone_switch">蓝牙已断开连接,请您检查手机蓝牙开关是否打开</string>
    <string name="check_ble_switch">蓝牙已断开连接,请您检查Ble设备开关是否打开</string>
    <string name="bluetooth_has_breaked">蓝牙已断开连接</string>
    <string name="bluetooth_is_opening">蓝牙正在打开中...</string>
    <string name="only_click_button">每次只能按住一个方向键</string>

    <!--暂时不用-->
    <!--<string name="cmd_sending">请稍后...</string>-->
    <string name="crash_reminder">抱歉,程序异常,即将重启</string>
    <string name="exit_app_remind">您是否确定退出Pets Hunting应用</string>
</resources>