<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <Button
        android:id="@+id/bt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/layout_size_20"
        android:layout_marginRight="@dimen/layout_size_20"
        android:layout_marginTop="@dimen/layout_size_5"
        android:background="@drawable/title_button_shape"
        android:gravity="center"
        android:text="@string/set_up_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_20"></Button>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_size_10"
                android:gravity="center"
                android:text="@string/setup_1"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20" />

            <!--字体加粗-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setup_2"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_25"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setup_3"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/toy_switch" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_size_10"
                    android:text="@string/setup_one"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_25" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/layout_size_10"
                    android:text="@string/setup_step_1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_20" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_blue_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/bluetooth_switch" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/layout_size_10"
                    android:text="@string/setup_two"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_25" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/layout_size_10"
                    android:text="@string/setup_step_2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_20" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/open_app" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_size_10"
                    android:text="@string/setup_three"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_25" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/layout_size_10"
                    android:text="@string/setup_step_3"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_20" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/bt_menu"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/layout_size_40"
        android:background="@drawable/small_button_shape"
        android:text="@string/menu" />


</LinearLayout>