<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/layout_size_20">

        <Button
            android:id="@+id/bt_set_up"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/big_button_shape"
            android:text="@string/set_up" />

        <Button
            android:id="@+id/bt_user_guide"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_size_10"
            android:background="@drawable/big_button_shape"
            android:text="@string/user_guide" />

        <Button
            android:id="@+id/bt_play"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_size_10"
            android:background="@drawable/big_button_shape"
            android:text="@string/play" />

    </LinearLayout>


</RelativeLayout>