<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_size_50">

        <Button
            android:id="@+id/bt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/connect_the_toy"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"></Button>

        <Button
            android:id="@+id/bt_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/layout_size_10"
            android:background="@drawable/micsmall_button_shape"
            android:gravity="center"
            android:text="@string/match"
            android:textSize="@dimen/text_size_15"></Button>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/layout_size_5"
        android:background="@color/white">


        <com.handmark.pulltorefresh.library.PullToRefreshListView
            android:id="@+id/lv_device"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@drawable/listview_divider_shape"
            android:scrollbars="none"></com.handmark.pulltorefresh.library.PullToRefreshListView>


        <ImageView
            android:id="@+id/iv_load_null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/load_empty"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btn_re_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_load_null"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:text="@string/btn_re_load"/>
    </RelativeLayout>


</LinearLayout>